--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,33 @@
 repos:
   - repo: https://github.com/ambv/black
-    rev: stable
+    rev: 19.10b0
     hooks:
     - id: black
-      language_version: python3.7
+      language_version: python3
+      args: [--safe, --quiet]
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.6.0
+    hooks:
+    - id: blacken-docs
+      additional_dependencies: [black]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.5.0
+    hooks:
+    - id: trailing-whitespace
+      args: [--markdown-linebreak-ext=md]
+    - id: end-of-file-fixer
+    - id: fix-encoding-pragma
+      args: [--remove]
+    - id: debug-statements
+      language_version: python3
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.0.0
+    hooks:
+    - id: reorder-python-imports
+      args: ['--application-directories=.:benchit', --py3-plus]
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v0.761
+  #   hooks:
+  #   - id: mypy
+  #     files: ^(benchit/|tests/)
+  #     args: []
