--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,4 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-write_to = "benchit/_version.py"
+write_to = "amifast/_version.py"
