Incorrect names after rename

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = benchit
-description = benchit: simple powerful benchmarking with Python
+name = amifast
+description = amifast: simple powerful benchmarking with Python
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/sleighsoft/benchit
+url = https://github.com/sleighsoft/amifast
 project_urls =
-    Source=https://github.com/sleighsoft/benchit
-    Tracker=https://github.com/sleighsoft/benchit/issues
+    Source=https://github.com/sleighsoft/amifast
+    Tracker=https://github.com/sleighsoft/amifast/issues
 author = Julian Niedermeier
 author_email = jpniedermeier@gmail.com
 license = MIT license
@@ -31,7 +31,7 @@ platforms = unix, linux, osx, cygwin, win32
 
 [options]
 packages =
-    benchit
+    amifast
 install_requires =
     py-cpuinfo
 python_requires = >=3.5
@@ -40,7 +40,7 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    benchit=benchit:main
+    amifast=amifast:main
 
 [bdist_wheel]
 universal = True
@@ -64,7 +64,7 @@ upload-dir = doc/en/build/html
 formats = sdist.tgz,bdist_wheel
 
 [mypy]
-mypy_path = benchit
+mypy_path = amifast
 ignore_missing_imports = True
 no_implicit_optional = True
 show_error_codes = True
