--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,11 @@ repos:
   #   - id: mypy
   #     files: ^(benchit/|tests/)
   #     args: []
+  # - repo: local
+  #   hooks:
+  #   - id: tests
+  #     name: run tests
+  #     entry: pytest
+  #     language: system
+  #     types: [python]
+  #     stages: [push]
